--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,6 +5,11 @@
 
 body {
   padding-top: 60px;
+  
+}
+
+#task-name{
+  font-size: 1.8rem;  
 }
 
 section {
@@ -14,13 +19,18 @@ section {
 textarea {
   resize: vertical;
 }
-
+.btn {
+  margin-top:10px;
+}
 .center {
   text-align: center;
+  background-color:white;
 }
 
 .center h1 {
   margin-bottom: 10px;
+  font-weight: bold;
+  font-style: italic;
 }
 
 /* タイポグラフィ */
@@ -29,12 +39,16 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1;
 }
 
+
 h1 {
   font-size: 3em;
   letter-spacing: -2px;
   margin-bottom: 30px;
   text-align: center;
+   
 }
+
+  
 
 h2 {
   font-size: 1.2em;
@@ -51,23 +65,46 @@ p {
 }
 
 /* ヘッダー */
+.navbar {
+  background-color: teal;
+  border-color: #e7e7e7;
+}
+
+.header-list a{
+  color: white!important;
+  font-weight:bold;
+}
+.header-list a:hover {
+  color: silver!important;
+}
+
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+  background-color: teal;
+}
 
 #logo {
   float: left;
   margin-right: 10px;
   font-size: 1.7em;
   color: #fff;
-  text-transform: uppercase;
+  
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
+  font-style: italic;
 }
 
 #logo:hover {
-  color: #fff;
+  color: silver;
   text-decoration: none;
 }
-
+.dropdown-header {
+  background-color: rgba(200,200,200,0.5);
+  font-weight: bold;
+}
+.dropdown-menu li a{
+  color: black!important;
+}
 /* デバッグウインドウ */
 
 .debug_dump {
