--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,31 +1,25 @@
 <% provide(:title, "Top") %>
-<div class="jumbotron">
-  <h1>サンプルアプリ</h1>
-  <p>
-    皆さんの手で、この最低限の土台となるアプリケーションから<br>
-    タスク管理機能を持ったアプリケーションへと作り替えていきましょう！
-  </p>
 
-  <p>現在このアプリケーションには、以下の機能が備わっています。</p>
+<div class="row">
+  
+  <div class="col-md-7">
+    <div class="center jumbotron" id="top-main">
+      <h1 id="top-main-title">やの♡やのApp</h1>
+      <p>TaskAppは簡易ToDo管理ツールです。</p>
+      <p>↓↓初めてのご利用↓↓</p>
+        <a class="btn btn-lg btn-success " href="/signup">超アカウント作成</a>
+    </div>
+  </div>
 
-  <ul>
-    <li>ルートURLに対応したトップページ（このページです）</li>
-    <li>ユーザー機能
-      <ol>
-        <li>名前・メールアドレス・パスワード・ログイン認証用のカラムを持ったUserモデル</li>
-        <li>ユーザー新規登録と対応したページ</li>
-      </ol>
-    </li>
-    <li>ログイン機能
-      <ol>
-        <li>セッションによる一時的ログイン機能</li>
-        <li>Cookiesによる永続的ログイン機能</li>
-      </ol>
-    </li>
-  </ul>
-  <p>実質【勤怠チュートリアル第７章】までの機能を持ったアプリケーションとなります。</p>
-  <center>
-    <%= link_to "Sign Up", signup_path, class: "btn btn-lg btn-primary" %>
-    <%= link_to "Log In", login_path, class: "btn btn-lg btn-primary" %>
-  </center>
+  <div class="col-md-4">
+    <h1>スーパーログイン</h1>
+    <form action="/login" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="dqre6xzzgzeySW3DXPDvqVCLuXrJZVOClgOwfLr79dpOk5KUSF0ghlzjqkBroMln8WgIrahJ2SvtBi2Cb+nmqg==">
+        <label class="label-form" for="session_email">ゴールデンメールアドレス</label>
+        <input class="form-control" readonly="readonly" type="email" name="session[email]">
+  
+        <label class="label-form" for="session_password">グレイトフルパスワード</label>
+        <input class="form-control" readonly="readonly" type="password" name="session[password]">
+        
+        <input type="submit" name="commit" value="めちゃめちゃログイン状態です" class="btn btn-primary btn-block btn-form" disabled="disabled" data-disable-with="ログイン状態です">
+</form>  </div>
 </div>
